--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,26 @@
-<html>
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
     <head>
-        <title>{{ page.title }}</title>
+        <link href="/css/site.css" type="text/css" rel="stylesheet"/>
+        <title>Iteration Next - {{ page.title }}</title>
     </head>
 
     <body>
-        <h1>{{ page.title }}</h1>
-
-        {{ content }}
+        <div id="page">
+            <div id="header">
+                <h1>Iteration Next</h1>
+                <h2>by Bozhidar Batsov</h2>
+            </div>
+            <div id="middle">
+                <div id="menu">
+                </div>
+                <div id="content">
+                    {{ content }}
+                </div>
+            </div>
+            <div id="footer">
+                <p>Copyright &copy; 2010 Bozhidar Batsov. All Rights Reserved.</p>
+            </div>
+        </div>
     </body>
 </html>
