--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
             </div>
             <div id="middle">
                 <div id="menu">
+                    <a href="index.html">Home</a>
+                    <a href="archive.html">Archive</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="about.html">About</a>
                 </div>
                 <div id="content">
                     {{ content }}
