--- a/css/site.css
+++ b/css/site.css
@@ -1,46 +1,91 @@
 body {
-    background-color: #eee;
+    background-color: #3f3f3f;
+    color: #dcdccc;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     line-height: 18px;
 }
 
-h1 {font-size:18px; line-height:36px;}
-h2 {font-size:16px;}
-h3 {font-size:14px;}
+h1 {
+    font-size:18px;
+}
+
+h2 {
+    font-size:16px;
+}
+h3 {
+    font-size:14px;
+}
 
 #page {
-display:block;    
-width: 900px;
-margin: 0px auto;
+    display:block;    
+    width: 900px;
+    margin: 0px auto;
 }
 
 #menu
 {
-  text-align: center;
-  list-style: circle;
+    font-size: 14px;
+    text-align: center;
+    height:36px;
 }
-
-#menu a
-{
-  display: inline;
-  padding: 0px 6px 0px;
-}
-
-.selected
-{ 
-  text-decoration: overline;
-}
-
 
 #header {
-    height:108px;
+    height:120px;
     width:100%;
     text-align: center;
+}
+
+#header h1 {
+    font-size: 36px;
+    font-family: monospace;
+    line-height: 48px;
+}
+
+#header h2 {
+    font-style: italic;
 }
 
 #footer {
     width:100%;
     height:36px;
     text-align:center;
+}
+
+p.code {
+    font-family: monospace;
+}
+
+p.em {
+    font-style: italic;
+}
+
+span.archive {
+    font-family: monospace;
+}
+
+ul#list-nav {
+    list-style:none;
+    margin:20px;
+    padding:0;
+}
+
+ul#list-nav li {
+    display:inline
+}
+
+ul#list-nav li a {
+    text-decoration:none;
+    padding:5px 0;
+    width:160px;
+    background:#485e49;
+    color:#eee;
+    float:left;
+    text-align:center;
+    border-left:1px solid #fff;
+}
+
+ul#list-nav li a:hover {
+    background:#a2b3a1;
+    color:#000
 }
