updated theme a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <div id="page">
             <div id="header">
                 <h1>iteration.next()</h1>
-                <p class="code">/** An online novel about the Source, the Force, the real life and everything
+                <p class="comment">/** An online novel about the Source, the Force, the real life and everything
                 in between...**/<p>
                 <p class="em">by Bozhidar Batsov</p>
             </div>
