--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,15 +8,20 @@
     <body>
         <div id="page">
             <div id="header">
-                <h1>Iteration Next</h1>
-                <h2>by Bozhidar Batsov</h2>
+                <h1>iteration.next()</h1>
+                <p class="comment">/** An online novel about the Source, the Force, the real life and everything
+                in between...**/<p>
+                <p class="em">by Bozhidar Batsov</p>
             </div>
             <div id="middle">
                 <div id="menu">
-                    <a href="/index.html">Home</a>
-                    <a href="/archive.html">Archive</a>
-                    <a href="/projects.html">Projects</a>
-                    <a href="/about.html">About</a>
+                    <ul id="list-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="archive.html">Archive</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
+                    </ul>
                 </div>
                 <div id="content">
                     <h2>{{ page.title }}</h2>
