--- a/css/site.css
+++ b/css/site.css
@@ -6,13 +6,27 @@ body {
     line-height: 18px;
 }
 
+a:link {
+    color: #8cd0d3;
+}
+
+a:visited {
+    color: #cc9393;
+}
+
 h1 {
     font-size:18px;
 }
 
 h2 {
-    font-size:16px;
+    font-size:16px
+    color: #f0dfaf;
 }
+
+h2 a:link {
+    color: #f0dfaf;
+}
+
 h3 {
     font-size:14px;
 }
@@ -56,6 +70,11 @@ p.code {
     font-family: monospace;
 }
 
+p.comment {
+    font-family: monospace;
+    color: #7f9f7f;
+}
+
 p.em {
     font-style: italic;
 }
@@ -66,7 +85,6 @@ span.archive {
 
 ul#list-nav {
     list-style:none;
-    margin:20px;
     padding:0;
 }
 
@@ -77,12 +95,12 @@ ul#list-nav li {
 ul#list-nav li a {
     text-decoration:none;
     padding:5px 0;
-    width:160px;
-    background:#485e49;
+    width:175px;
+    background:#5f5f5f;
     color:#eee;
     float:left;
     text-align:center;
-    border-left:1px solid #fff;
+    border-left:1px solid #3f3f3f;
 }
 
 ul#list-nav li a:hover {
