--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,11 @@
             <div id="middle">
                 <div id="menu">
                     <ul id="list-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="archive.html">Archive</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="archive.html">Archive</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
                     </ul>
                 </div>
                 <div id="content">
@@ -29,6 +29,17 @@
             </div>
             <div id="footer">
                 <p>Copyright &copy; 2010 Bozhidar Batsov. All Rights Reserved.</p>
+                <!-- NACHALO NA TYXO.BG BROYACH -->
+                <script  type="text/javascript">
+                    <!-- 
+                         d=document;
+                         d.write('<a href="http://www.tyxo.bg/?110731" title="Tyxo.bg counter" target=" blank"><img width="80" height="15" border="0" alt="Tyxo.bg counter"');
+                         d.write(' src="http://cnt.tyxo.bg/110731?rnd='+Math.round(Math.random()*2147483647));
+                         d.write('&sp='+screen.width+'x'+screen.height+'&r='+escape(d.referrer)+'" /><\/a>');
+                         //-->
+                </script>
+                <noscript><a href="http://www.tyxo.bg/?110731" title="Tyxo.bg counter" target="_blank"><img src="http://cnt.tyxo.bg/110731" width="80" height="15" border="0" alt="Tyxo.bg counter" /></a></noscript>
+                <!-- KRAI NA TYXO.BG BROYACH -->
             </div>
         </div>
     </body>
