--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,11 +16,11 @@
             <div id="middle">
                 <div id="menu">
                     <ul id="list-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="archive.html">Archive</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/archive.html">Archive</a></li>
+                        <li><a href="/projects.html">Projects</a></li>
+                        <li><a href="/about.html">About</a></li>
+                        <li><a href="/contacts.html">Contacts</a></li>
                     </ul>
                 </div>
                 <div id="content">
