--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div id="footer">
-                    <p>Copyright &copy; 2010 Bozhidar Batsov. All Rights Reserved.</p>
+                    <p>Copyright &copy; 2010-2011 Bozhidar Batsov. All Rights Reserved.</p>
                     <!-- NACHALO NA TYXO.BG BROYACH -->
                     <script  type="text/javascript">
                         <!-- 
