--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
     <head>
         <link href="/css/site.css" type="text/css" rel="stylesheet"/>
+        <link href="/css/syntax.css" type="text/css" rel="stylesheet"/>
         <title>Iteration Next - {{ page.title }}</title>
     </head>
 
