improved layout, partially implemented zenburn for pygments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,26 +3,25 @@
     <head>
         <link href="/css/site.css" type="text/css" rel="stylesheet"/>
         <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-        <title>iteration.next() - {{ page.title }}</title>
+        <title>(think) - {{ page.title }}</title>
     </head>
 
     <body>
         <div id="page">
             <div id="content">
                 <div id="header">
-                    <h1>iteration.next()</h1>
+                    <h1>(think)</h1>
                     <p class="comment">/** An online novel about the Source, the Force, the real life and everything
-                    in between...**/<p>
-                    <p class="em">by Bozhidar Batsov</p>
+                    in between...**/</p>
                 </div>
                 <div id="middle">
                     <div id="menu">
                         <ul id="list-nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="archive.html">Archive</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contacts.html">Contacts</a></li>
+                            <li><a href="/index.html">Home</a></li>
+                            <li><a href="/archive.html">Archive</a></li>
+                            <li><a href="/projects.html">Projects</a></li>
+                            <li><a href="/about.html">About</a></li>
+                            <li><a href="/contacts.html">Contacts</a></li>
                         </ul>
                     </div>
                     <div id="content">
@@ -30,7 +29,7 @@
                     </div>
                 </div>
                 <div id="footer">
-                    <p>Copyright &copy; 2010-2011 Bozhidar Batsov. All Rights Reserved.</p>
+                    <p>Copyright &copy; 2010-2011 <a href="mailto:bozhidar.batsov@gmail.com">Bozhidar Batsov</a>. All Rights Reserved.</p>
                     <!-- NACHALO NA TYXO.BG BROYACH -->
                     <script  type="text/javascript">
                         <!-- 
@@ -46,8 +45,8 @@
             </div>
             <div id="sidebar">
                 <div id="twitter">
-                    <script src="http://widgets.twimg.com/j/2/widget.js"></script>
-                    <script>
+                    <script src="http://widgets.twimg.com/j/2/widget.js" type="text/javascript"></script>
+                    <script type="text/javascript">
                         new TWTR.Widget({
                         version: 2,
                         type: 'profile',
