--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,56 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-    <head>
-        <link href="/css/site.css" type="text/css" rel="stylesheet"/>
-        <link href="/css/syntax.css" type="text/css" rel="stylesheet"/>
-        <title>Iteration Next - {{ page.title }}</title>
-    </head>
+---
+layout: default
+---
 
-    <body>
-        <div id="page">
-            <div id="header">
-                <h1>iteration.next()</h1>
-                <p class="comment">/** An online novel about the Source, the Force, the real life and everything
-                in between...**/<p>
-                <p class="em">by Bozhidar Batsov</p>
-            </div>
-            <div id="middle">
-                <div id="menu">
-                    <ul id="list-nav">
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/archive.html">Archive</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/contacts.html">Contacts</a></li>
-                    </ul>
-                </div>
-                <div id="content">
-                    <h2>{{ page.title }}</h2>
-                    {{ content }}
-                    <em>Posted on {{ page.date | date_to_long_string }}.</em>
-                </div>
-            </div>
-            <div id="disqus_thread"></div>
-            <script type="text/javascript">
-                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                var disqus_shortname = 'iteration-next'; // required: replace example with your forum shortname
-
-                // The following are highly recommended additional parameters. Remove the slashes in front to use.
-                // var disqus_identifier = 'unique_dynamic_id_1234';
-                // var disqus_url = 'http://example.com/permalink-to-page.html';
-
-                /* * * DON'T EDIT BELOW THIS LINE * * */
-                (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-            <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-            <div id="footer">
-                <p>Copyright &copy; 2010 Bozhidar Batsov. All Rights Reserved.</p>
-            </div>
-        </div>
-    </body>
-</html>
+<div id="post">
+    <h2><a href="{{ page.url }}">
+        {{ page.title }}
+    </a></h2>
+    {{ content }}
+    <div style="font-style: italic; color: #7f9f7f;">Posted on {{ page.date | date_to_string }} by Bozhidar.</div>
+    <hr />
+    <div id="disqus">
+        <div id="disqus_thread"></div>
+        <script type="text/javascript" src="http://disqus.com/forums/iteration-next/embed.js"></script>
+        <noscript><a href="http://iteration-next.disqus.com/?url=ref">View the discussion thread.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+    </div>
+</div>
