--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,7 @@
-.hll { background-color: #3f3f3f; }
-.c { color: #008800; font-style: italic } /* Comment */
-.err { border: 1px solid #FF0000 } /* Error */
-.k { color: #AA22FF; font-weight: bold } /* Keyword */
+.highlight { background-color: #464646; }
+.c { color: #7f9f7f; font-style: italic } /* Comment */
+.err { border: 1px solid #cc9393 } /* Error */
+.k { color: #f0dfaf; font-weight: bold } /* Keyword */
 .o { color: #666666 } /* Operator */
 .cm { color: #7f9f7f; font-style: italic } /* Comment.Multiline */
 .cp { color: #7f9f7f; } /* Comment.Preproc */
@@ -17,27 +17,27 @@
 .gs { font-weight: bold } /* Generic.Strong */
 .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
 .gt { color: #0040D0 } /* Generic.Traceback */
-.kc { color: #AA22FF; font-weight: bold } /* Keyword.Constant */
-.kd { color: #AA22FF; font-weight: bold } /* Keyword.Declaration */
-.kn { color: #AA22FF; font-weight: bold } /* Keyword.Namespace */
-.kp { color: #AA22FF } /* Keyword.Pseudo */
-.kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
+.kc { color: #f0dfaf; font-weight: bold } /* Keyword.Constant */
+.kd { color: #f0dfaf; font-weight: bold } /* Keyword.Declaration */
+.kn { color: #f0dfaf; font-weight: bold } /* Keyword.Namespace */
+.kp { color: #f0dfaf } /* Keyword.Pseudo */
+.kr { color: #f0dfaf; font-weight: bold } /* Keyword.Reserved */
 .kt { color: #00BB00; font-weight: bold } /* Keyword.Type */
 .m { color: #666666 } /* Literal.Number */
-.s { color: #BB4444 } /* Literal.String */
-.na { color: #BB4444 } /* Name.Attribute */
-.nb { color: #AA22FF } /* Name.Builtin */
-.nc { color: #0000FF } /* Name.Class */
-.no { color: #880000 } /* Name.Constant */
-.nd { color: #AA22FF } /* Name.Decorator */
-.ni { color: #999999; font-weight: bold } /* Name.Entity */
-.ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.nf { color: #00A000 } /* Name.Function */
-.nl { color: #A0A000 } /* Name.Label */
-.nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.nt { color: #008000; font-weight: bold } /* Name.Tag */
+.s { color: #cc9393 } /* Literal.String */
+.na { color: #8cd0d3 } /* Name.Attribute */
+.nb { color: #8cd0d3 } /* Name.Builtin */
+.nc { color: #8cd0d3 } /* Name.Class */
+.no { color: #8cd0d3 } /* Name.Constant */
+.nd { color: #8cd0d3 } /* Name.Decorator */
+.ni { color: #8cd0d3; font-weight: bold } /* Name.Entity */
+.ne { color: #8cd0d3; font-weight: bold } /* Name.Exception */
+.nf { color: #8cd0d3 } /* Name.Function */
+.nl { color: #8cd0d3 } /* Name.Label */
+.nn { color: #8cd0d3; font-weight: bold } /* Name.Namespace */
+.nt { color: #8cd0d3; font-weight: bold } /* Name.Tag */
 .nv { color: #B8860B } /* Name.Variable */
-.ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+.ow { color: #f0dfaf; font-weight: bold } /* Operator.Word */
 .w { color: #bbbbbb } /* Text.Whitespace */
 .mf { color: #666666 } /* Literal.Number.Float */
 .mh { color: #666666 } /* Literal.Number.Hex */
@@ -54,7 +54,7 @@
 .sr { color: #BB6688 } /* Literal.String.Regex */
 .s1 { color: #BB4444 } /* Literal.String.Single */
 .ss { color: #B8860B } /* Literal.String.Symbol */
-.bp { color: #AA22FF } /* Name.Builtin.Pseudo */
+.bp { color: #f0dfaf } /* Name.Builtin.Pseudo */
 .vc { color: #B8860B } /* Name.Variable.Class */
 .vg { color: #B8860B } /* Name.Variable.Global */
 .vi { color: #B8860B } /* Name.Variable.Instance */
